--- a/booking/public/index.html
+++ b/booking/public/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/bootstrap-calendar/dist/css/font-awesome.min.css">
     <link rel="stylesheet" href="/bootstrap-calendar/dist/css/bootstrap-calendar.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/react-datepicker/2.14.1/react-datepicker.min.css" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
